# Cloud-File

./: .gitignore  LICENSE  README.md
Cloud_File_Client/: AppMainWindow.qml  CMakeLists.txt  Main.qml  font.qrc  main.cpp
Cloud_File_Client/Device/: updatedevice.cpp  updatedevice.h
Cloud_File_Client/Model/: allfilemodel.cpp  allfilemodel.h  downloadstatemodel.cpp  downloadstatemodel.h  threadloop.cpp  threadloop.h  uploadfileinfomode.cpp  uploadfileinfomode.h
Cloud_File_Client/Net_Work/: networkoperate.cpp  networkoperate.h  networkoperation.cpp  networkoperation.h  threadloop.cpp  threadloop.h
Cloud_File_Client/Page/: AccountPage.qml  AllFile.qml  AllFilePage.qml  DownLoadStatePage.qml  HomePage.qml  MyFile.qml  PictureFilePage.qml  TransportPage.qml  UpLoadStatusPage.qml  VideoPage.qml
Cloud_File_Client/SERVER_CONFIG/: SERVER_CONFIG.h  SERVER_URLS.h
Cloud_File_Client/Work_Thread/: downloadthread.cpp  downloadthread.h
Cloud_File_Client/global/: ItemsOriginal.qml  MyFileItems.qml  TransportItems.qml  globalstatus.cpp  globalstatus.h  itemsFooter.qml  qmldir
Cloud_File_Server/: CMakeLists.txt
Cloud_File_Server/include/: File_Info.hpp  db_opteration.hpp  json.hpp
Cloud_File_Server/include/mysql/: mysql_version.h  mysqlx_version.h  server_config.h
Cloud_File_Server/src/: CMakeLists.txt  GetAllFileInfo.cpp  GetAllFileInfo.h  GetPathInfo.cpp  GetPathInfo.h  testServer.cpp
Cloud_File_Server/src/GetFileInfo/: GetAllFileInfo.cpp
Cloud_File_Server/src/TestServer/: CMakeLists.txt
Cloud_File_Server/src/TestServer/src/: testServer.cpp
Cloud_File_Server/src/UploadFile/: UpLoadFile.cpp  UpLoadFile.h
Cloud_File_Server_Python/: manage.py  server_start.bat  server_start.sh
Cloud_File_Server_Python/Cloud_File_Server_Python/: asgi.py  settings.py  urls.py  wsgi.py
Cloud_File_Server_Python/Server/: admin.py  apps.py  models.py  views.py
Cloud_File_Server_Python/Server/migrations/: 0001_initial.py
logs/: basic-log.txt
